# crc-fast-rs

./: Cargo.toml  README.md  algos.csv  gen_crates.sh  publish_crates.sh
crc-crate-template/: Cargo.toml  README.md
crc-crate-template/benches/: fast_vs_fallback.rs  simd_vs_table_vs_simple.rs
crc-crate-template/src/: lib.rs
crc-fast-gen/: Cargo.toml  README.md
crc-fast-gen/src/: lib.rs
crc10-atm-fast/: Cargo.toml  README.md
crc10-atm-fast/benches/: simd_vs_table_vs_simple.rs
crc10-atm-fast/src/: lib.rs
crc10-cdma2000-fast/: Cargo.toml  README.md
crc10-cdma2000-fast/benches/: simd_vs_table_vs_simple.rs
crc10-cdma2000-fast/src/: lib.rs
crc10-gsm-fast/: Cargo.toml  README.md
crc10-gsm-fast/benches/: simd_vs_table_vs_simple.rs
crc10-gsm-fast/src/: lib.rs
crc11-flexray-fast/: Cargo.toml  README.md
crc11-flexray-fast/benches/: simd_vs_table_vs_simple.rs
crc11-flexray-fast/src/: lib.rs
crc11-umts-fast/: Cargo.toml  README.md
crc11-umts-fast/benches/: simd_vs_table_vs_simple.rs
crc11-umts-fast/src/: lib.rs
crc12-cdma2000-fast/: Cargo.toml  README.md
crc12-cdma2000-fast/benches/: simd_vs_table_vs_simple.rs
crc12-cdma2000-fast/src/: lib.rs
crc12-dect/: Cargo.toml  README.md
crc12-dect-fast/: Cargo.toml  README.md
crc12-dect-fast/benches/: simd_vs_table_vs_simple.rs
crc12-dect-fast/src/: lib.rs
crc12-dect/benches/: simd_vs_table_vs_simple.rs
crc12-gsm/: Cargo.toml  LICENSE  README.md
crc12-gsm-fast/: Cargo.toml  README.md
crc12-gsm-fast/benches/: simd_vs_table_vs_simple.rs
crc12-gsm-fast/src/: lib.rs
crc12-gsm/benches/: simd_vs_table_vs_simple.rs
crc13-bbc/: Cargo.toml  README.md
crc13-bbc-fast/: Cargo.toml  README.md
crc13-bbc-fast/benches/: simd_vs_table_vs_simple.rs
crc13-bbc-fast/src/: lib.rs
crc13-bbc/benches/: simd_vs_table_vs_simple.rs
crc14-gsm/: Cargo.toml  README.md
crc14-gsm-fast/: Cargo.toml  README.md
crc14-gsm-fast/benches/: simd_vs_table_vs_simple.rs
crc14-gsm-fast/src/: lib.rs
crc14-gsm/benches/: simd_vs_table_vs_simple.rs
crc14-gsm/src/: lib.rs
crc15-can/: Cargo.toml  README.md
crc15-can-fast/: Cargo.toml  README.md
crc15-can-fast/benches/: simd_vs_table_vs_simple.rs
crc15-can-fast/src/: lib.rs
crc15-can/benches/: simd_vs_table_vs_simple.rs
crc15-can/src/: lib.rs
crc15-mpt1327/: Cargo.toml  README.md
crc15-mpt1327-fast/: Cargo.toml  README.md
crc15-mpt1327-fast/benches/: simd_vs_table_vs_simple.rs
crc15-mpt1327-fast/src/: lib.rs
crc15-mpt1327/benches/: simd_vs_table_vs_simple.rs
crc15-mpt1327/src/: lib.rs
crc16-cdma2000-fast/: Cargo.toml  README.md
crc16-cdma2000-fast/benches/: fast_vs_fallback.rs  simd_vs_table_vs_simple.rs
crc16-cdma2000-fast/src/: lib.rs
crc16-cms-fast/: Cargo.toml  README.md
crc16-cms-fast/benches/: simd_vs_table_vs_simple.rs
crc16-cms-fast/src/: lib.rs
crc16-dds110-fast/: Cargo.toml  README.md
crc16-dds110-fast/benches/: simd_vs_table_vs_simple.rs
crc16-dds110-fast/src/: lib.rs
crc16-dectr-fast/: Cargo.toml  README.md
crc16-dectr-fast/benches/: simd_vs_table_vs_simple.rs
crc16-dectr-fast/src/: lib.rs
crc16-dectx-fast/: Cargo.toml  README.md
crc16-dectx-fast/benches/: simd_vs_table_vs_simple.rs
crc16-dectx-fast/src/: lib.rs
crc16-en13757-fast/: Cargo.toml  README.md
crc16-en13757-fast/benches/: fast_vs_fallback.rs  simd_vs_table_vs_simple.rs
crc16-en13757-fast/src/: lib.rs
crc16-genibus-fast/: Cargo.toml  README.md
crc16-genibus-fast/benches/: simd_vs_table_vs_simple.rs
crc16-genibus-fast/src/: lib.rs
crc16-gsm-fast/: Cargo.toml  README.md
crc16-gsm-fast/benches/: simd_vs_table_vs_simple.rs
crc16-gsm-fast/src/: lib.rs
crc16-ibm3740-fast/: Cargo.toml  README.md
crc16-ibm3740-fast/benches/: simd_vs_table_vs_simple.rs
crc16-ibm3740-fast/src/: lib.rs
crc16-m17-fast/: Cargo.toml  README.md
crc16-m17-fast/benches/: simd_vs_table_vs_simple.rs
crc16-m17-fast/src/: lib.rs
crc16-opensafetya-fast/: Cargo.toml  README.md
crc16-opensafetya-fast/benches/: simd_vs_table_vs_simple.rs
crc16-opensafetya-fast/src/: lib.rs
crc16-opensafetyb-fast/: Cargo.toml  README.md
crc16-opensafetyb-fast/benches/: simd_vs_table_vs_simple.rs
crc16-opensafetyb-fast/src/: lib.rs
crc16-profibus-fast/: Cargo.toml  README.md
crc16-profibus-fast/benches/: simd_vs_table_vs_simple.rs
crc16-profibus-fast/src/: lib.rs
crc16-spifujitsu-fast/: Cargo.toml  README.md
crc16-t10dif-fast/: Cargo.toml  README.md
crc16-teledisk-fast/: Cargo.toml  README.md
crc16-umts-fast/: Cargo.toml  README.md
crc16-umts-fast/benches/: simd_vs_table_vs_simple.rs
crc16-umts-fast/src/: lib.rs
crc16-xmodem-fast/: Cargo.toml  README.md
crc17-canfd-fast/: Cargo.toml  README.md
crc21-canfd-fast/: Cargo.toml  README.md
crc24-flexraya-fast/: Cargo.toml  README.md
crc24-flexrayb-fast/: Cargo.toml  README.md
crc24-interlaken-fast/: Cargo.toml  README.md
crc24-ltea-fast/: Cargo.toml  README.md
crc24-lteb-fast/: Cargo.toml  README.md
crc24-openpgp-fast/: Cargo.toml  README.md
crc24-opgp-fast/: Cargo.toml
crc24-os9-fast/: Cargo.toml  README.md
crc32-aixm-fast/: Cargo.toml  README.md
crc32-bzip2-fast/: Cargo.toml  README.md
crc32-bzip2-fast/benches/: simd_vs_table_vs_simple.rs
crc32-bzip2-fast/src/: lib.rs
crc32-cksum-fast/: Cargo.toml  README.md
crc32-mpeg2-fast/: Cargo.toml  README.md
crc32-xfer-fast/: Cargo.toml  README.md
crc8-autosar-fast/: Cargo.toml  README.md
crc8-cdma2000-fast/: Cargo.toml  README.md
crc8-dvbs2-fast/: Cargo.toml  README.md
crc8-gsma-fast/: Cargo.toml  README.md
crc8-gsmb-fast/: Cargo.toml  README.md
crc8-hitag-fast/: Cargo.toml  README.md
crc8-i4321-fast/: Cargo.toml  README.md
crc8-icode-fast/: Cargo.toml  README.md
crc8-lte-fast/: Cargo.toml  README.md
crc8-mifaremad-fast/: Cargo.toml  README.md
crc8-nrsc5-fast/: Cargo.toml  README.md
crc8-opensafety-fast/: Cargo.toml  README.md
crc8-smbus-fast/: Cargo.toml  README.md
crc8-smbus-fast/benches/: simd_vs_table_vs_simple.rs
crc8-smbus-fast/src/: lib.rs
src/: Cargo.toml  crc.rs  crc24.rs  lib.rs
(+62 files in other folders)
