[workspace]
# WARNING: This file is managed by the gen_crate.sh script
resolver = "2"
members = [
    "crc-fast-gen",
    "crc8-autosar-fast",
    "crc8-cdma2000-fast",
    "crc16-cdma2000-fast",
    "crc16-en13757-fast",
    "crc24-openpgp-fast",
    "crc32-aixm-fast",
    "crc32-bzip2-fast",
    "crc32-mpeg2-fast",
]
