[workspace]
# WARNING: This file is managed by the gen_crate.sh script
resolver = "2"
members = [
    "crc-fast-gen",
    "crc8-autosar-fast",
    "crc8-cdma2000-fast",
    "crc8-dvbs2-fast",
    "crc8-gsma-fast",
    "crc8-gsmb-fast",
    "crc8-hitag-fast",
    "crc8-i4321-fast",
    "crc8-icode-fast",
    "crc8-lte-fast",
    "crc8-mifaremad-fast",
    "crc8-nrsc5-fast",
    "crc8-opensafety-fast",
    "crc8-smbus-fast",
    "crc16-cdma2000-fast",
    "crc16-cms-fast",
    "crc16-dds110-fast",
    "crc16-dectr-fast",
    "crc16-dectx-fast",
    "crc16-en13757-fast",
    "crc16-genibus-fast",
    "crc16-gsm-fast",
    "crc16-ibm3740-fast",
    "crc16-m17-fast",
    "crc16-opensafetya-fast",
    "crc16-opensafetyb-fast",
    "crc16-profibus-fast",
    "crc16-spifujitsu-fast",
    "crc16-t10dif-fast",
    "crc16-teledisk-fast",
    "crc16-umts-fast",
    "crc16-xmodem-fast",
    "crc24-flexraya-fast",
    "crc24-flexrayb-fast",
    "crc24-interlaken-fast",
    "crc24-ltea-fast",
    "crc24-lteb-fast",
    "crc24-openpgp-fast",
    "crc24-os9-fast",
    "crc32-aixm-fast",
    "crc32-bzip2-fast",
    "crc32-mpeg2-fast",
]
