[package]
name = "$PACKAGE_NAME"
version = "$VERSION"
edition = "2021"
license = "MIT"

[features]
default = ["table-fallback"]
table-fallback = []

[dependencies]
crc-fast-gen = { path = "../crc-fast-gen" }

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"] }

[lib]
bench = false

[[bench]]
name = "simd_vs_table_vs_simple"
harness = false