[package]
name = "crc16-umts-fast"
authors = ["Tobias Bengtsson <me@tobiasbengtsson.se>"]
description = "SIMD-powered implementation of CRC-16/UMTS (CRC-16/BUYPASS CRC-16/VERIFONE)"
repository = "https://github.com/TobiasBengtsson/crc-fast-rs"
version = "0.4.0"
edition = "2021"
license = "MIT"
keywords = ["crc", "checksum", "hash", "simd"]

[features]
default = ["table-fallback"]
table-fallback = []

[dependencies]
crc-fast-gen = "0.4.0"
core_detect = "1"

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"] }

[lib]
bench = false

[[bench]]
name = "simd_vs_table_vs_simple"
harness = false