[package]
name = "crc32-bzip2-fast"
authors = ["Tobias Bengtsson <me@tobiasbengtsson.se>"]
description = "SIMD-powered implementation of CRC-32/BZIP2 (B-CRC-32 CRC-32/AAL5 CRC-32/DECT-B)"
repository = "https://github.com/TobiasBengtsson/crc-fast-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["crc", "checksum", "hash", "simd"]

[features]
default = ["table-fallback"]
table-fallback = []

[dependencies]
crc-fast-gen = "0.2.0"

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"] }

[lib]
bench = false

[[bench]]
name = "simd_vs_table_vs_simple"
harness = false